NEON-1920 Updated the Sample visualization to use the Single Table Visualization superclass.

--- a/client/index.html
+++ b/client/index.html
@@ -278,7 +278,7 @@
         <script src="components/opsClock/opsClock.controller.js"></script>
         <script src="components/optionsMenu/optionsMenu.directive.js"></script>
         <script src="components/poweredByNeon/poweredByNeon.directive.js"></script>
-        <script src="components/sample/sample.directive.js"></script>
+        <script src="components/sample/sample.controller.js"></script>
         <script src="components/savedStates/savedStates.directive.js"></script>
         <script src="components/scatterPlot/scatterPlot.controller.js"></script>
         <script src="components/singleTableVisualization/singleTableVisualization.directive.js"></script>
