Adding a few more widget descriptors and files.

--- a/client/descriptors/dataTableWidgetDescriptor.html
+++ b/client/descriptors/dataTableWidgetDescriptor.html
@@ -21,13 +21,13 @@ p=/[\\\"\x00-\x1f\x7f-\x9f\u00ad\u0600-\u0604\u070f\u17b4\u17b5\u200c-\u200f\u20
     path = path.replace(/\/[^\/]+$/, "/");
 
     widgetData = {
-        "universalName": "neon.demo.widget.queryresults",
-        "displayName": "Neon Query Results",
+        "universalName": "neon.demo.widget.data-table",
+        "displayName": "Neon Data Table",
         "description": "A sample widget that uses Neon's querying capabilities to display a table of records that match the current Neon connection and all applicable Neon filters applied to a datasource used in the current user session.",
         "widgetVersion": "1.0",
-        "widgetUrl": path + "../queryResultsTableWidget.html",
-        "imageUrlSmall": path + "../img/Neon_16x16.png",
-        "imageUrlLarge": path + "../img/Neon_60x34.png",
+        "widgetUrl": path + "../dataTableWidget.html",
+        "imageUrlSmall": path + "../assets/images/visualizations/ViewData64.png",
+        "imageUrlLarge": path + "../assets/images/visualizations/ViewData64.png",
         "width": 500,
         "height": 500,
         "visible": true,
