NEON-1955 NEON-1956 Created the Multiple Table Visualization superclass and updated the Map so that it is now created using this new superclass.  Also performed various cleanup in the Map's options and styling.

--- a/client/index.html
+++ b/client/index.html
@@ -266,10 +266,11 @@
         <script src="components/linksPopup/linksPopupButton.directive.js"></script>
         <script src="components/map/coremap.js"></script>
         <script src="components/map/heatmapLayer.js"></script>
-        <script src="components/map/map.directive.js"></script>
+        <script src="components/map/map.controller.js"></script>
         <script src="components/map/nodeLayer.js"></script>
         <script src="components/map/pointsLayer.js"></script>
         <script src="components/map/selectedPointsLayer.js"></script>
+        <script src="components/multipleTableVisualization/multipleTableVisualization.directive.js"></script>
         <script src="components/networkGraph/directedGraph.js"></script>
         <script src="components/networkGraph/directedGraphMediator.js"></script>
         <script src="components/networkGraph/networkGraph.controller.js"></script>
@@ -293,6 +294,7 @@
         <script src="components/translationOptions/translationOptions.directive.js"></script>
         <script src="components/visualization/visualizationDisplay.directive.js"></script>
         <script src="components/visualization/visualizationHeaders.directive.js"></script>
+        <script src="components/visualization/visualizationLayerOptions.directive.js"></script>
         <script src="components/visualization/visualizationOptions.directive.js"></script>
         <script src="components/visualizationWidget/visualizationWidget.directive.js"></script>
         <!-- endinjector -->
