--- a/client/textCloudWidget.html
+++ b/client/textCloudWidget.html
@@ -42,7 +42,7 @@
         <link rel="stylesheet" type="text/css" ng-href="app/themes/{{theme.selected.file}}.css">
         <!-- Widget Config -->
         <div class="visualization-well visualization-widget">
-            <div single-table-visualization name="Data Table" type="dataTable" class="single-table-visualization" active="active" bindings="bindings" log-element-group="table_group" log-element-type="table" visualization-id="{{visualizationId}}"></div>
+            <div single-table-visualization name="Text Cloud" type="textCloud" class="single-table-visualization" active="active" bindings="bindings" log-element-group="chart_group" log-element-type="scatter" visualization-id="{{visualizationId}}"></div>
         </div>
         <!-- In production use:
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
@@ -315,9 +315,10 @@
                 
                 $scope.bindings = {
                     aggregation: 'count',
-                    limit: 5000,
+                    limit: 1000,
                     database: {'name': 'test'},
                     table: {'name': 'earthquakes'},
+                    dataField: 'type'
                 };
                 $scope.bindings.hideAdvancedOptions = config.hideAdvancedOptions;
                 $scope.bindings.hideHeader = config.hideHeader;
