--- a/client/descriptors/mapWidgetDescriptor.html
+++ b/client/descriptors/mapWidgetDescriptor.html
@@ -22,12 +22,12 @@ p=/[\\\"\x00-\x1f\x7f-\x9f\u00ad\u0600-\u0604\u070f\u17b4\u17b5\u200c-\u200f\u20
 
     widgetData = {
         "universalName": "neon.demo.widget.heatmap",
-        "displayName": "Neon Heat Map",
-        "description": "A sample widget that uses Neon's querying and filter capabilities to pull data from a Mongo database and populate an OpenLayers map.",
+        "displayName": "Neon Map",
+        "description": "A sample widget that uses Neon's querying and filter capabilities to pull data from a database and populate an OpenLayers map.",
         "widgetVersion": "1.0",
-        "widgetUrl": path + "../heatMapWidget.html",
-        "imageUrlSmall": path + "../img/Neon_16x16.png",
-        "imageUrlLarge": path + "../img/Neon_60x34.png",
+        "widgetUrl": path + "../mapWidget.html",
+        "imageUrlSmall": path + "../assets/images/visualizations/Map64.png",
+        "imageUrlLarge": path + "../assets/images/visualizations/Map64.png",
         "width": 500,
         "height": 500,
         "visible": true,
