Correcting tooltips on a few of the visualizations in OWF.

--- a/client/textCloudWidget.html
+++ b/client/textCloudWidget.html
@@ -44,6 +44,7 @@
         <div class="visualization-well visualization-widget">
             <div single-table-visualization name="Text Cloud" type="textCloud" class="single-table-visualization" active="active" bindings="bindings" log-element-group="chart_group" log-element-type="scatter" visualization-id="{{visualizationId}}"></div>
         </div>
+        <div id="tooltip-container"></div>
         <!-- In production use:
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
         -->
