--- a/client/dataSelectorWidget.html
+++ b/client/dataSelectorWidget.html
@@ -43,7 +43,7 @@
 
         <!-- Database Config -->
         <database-config gridster-configs="visualizations"></database-config>
-
+        <div id="tooltip-container"></div>
         <!-- In production use:
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
         -->
