--- a/client/dataTableWidget.html
+++ b/client/dataTableWidget.html
@@ -44,6 +44,7 @@
         <div class="visualization-well visualization-widget">
             <div single-table-visualization name="Data Table" type="dataTable" class="single-table-visualization" active="active" bindings="bindings" log-element-group="table_group" log-element-type="table" visualization-id="{{visualizationId}}"></div>
         </div>
+        <div id="tooltip-container"></div>
         <!-- In production use:
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
         -->
