--- a/client/linechartWidget.html
+++ b/client/linechartWidget.html
@@ -44,6 +44,7 @@
         <div class="visualization-well visualization-widget">
             <div multiple-table-visualization name="Line Chart" type="lineChart" class="multiple-table-visualization" active="active" bindings="bindings" log-element-group="chart_group" log-element-type="linechart" visualization-id="{{visualizationId}}"></div>
         </div>
+        <div id="tooltip-container"></div>
         <!-- In production use:
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
         -->
