--- a/client/timelineSelectorWidget.html
+++ b/client/timelineSelectorWidget.html
@@ -44,7 +44,7 @@
         <div class="visualization-well visualization-widget">
             <div single-table-visualization name="Timeline" type="timeline" class="single-table-visualization" active="active" bindings="bindings" log-element-group="chart_group" log-element-type="timeline" visualization-id="{{visualizationId}}"></div>
         </div>
-        
+        <div id="tooltip-container"></div>
         <!-- In production use:
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
         -->
