NEON-1957 Updated the Line Chart so that it is now created using the Multiple Table Visualization superclass.  Reworked querying and filtering in the superclass to work with both the Line Chart and the Map and to fix some bugs.  Updated the Map as needed.  Moved the styling for the Multiple Table Visualization layer options out of the Line Chart and Map style files into the main style file.

--- a/client/index.html
+++ b/client/index.html
@@ -259,7 +259,7 @@
         <script src="components/ganttChart/ganttChart.controller.js"></script>
         <script src="components/import/import.directive.js"></script>
         <script src="components/import/removeDataset.directive.js"></script>
-        <script src="components/lineChart/lineChart.directive.js"></script>
+        <script src="components/lineChart/lineChart.controller.js"></script>
         <script src="components/lineChart/lineChart.js"></script>
         <script src="components/linksPopup/linksPopup.directive.js"></script>
         <script src="components/linksPopup/linksPopup.service.js"></script>
