--- a/client/mapWidget.html
+++ b/client/mapWidget.html
@@ -296,9 +296,6 @@
 
                 $scope.element = $(window);
 
-                console.log(config);
-                console.log(datasets);
-                console.log(layouts);
                 // Load the possible datasets.
                 // for (var i = 0; i < datasets.length; i++) {
                 //     datasetService.addDataset(datasets[i]);
@@ -314,8 +311,10 @@
 
                 
                 $scope.bindings = {
-
+                    config : datasets[0].mapLayers,
+                    baseLayerColor: 'dark'
                 };
+
                 $scope.bindings.hideAdvancedOptions = config.hideAdvancedOptions;
                 $scope.bindings.hideHeader = config.hideHeader;
                 $scope.visualizationId = OWF.getInstanceId();
