NEON-1958 Moved the layer options elements from the HTML template for the Multiple Table Visualization superclass into their own directive to make future restructuring of the superclass hierarchy easier.

--- a/client/index.html
+++ b/client/index.html
@@ -270,6 +270,7 @@
         <script src="components/map/nodeLayer.js"></script>
         <script src="components/map/pointsLayer.js"></script>
         <script src="components/map/selectedPointsLayer.js"></script>
+        <script src="components/multipleTableVisualization/layerOptions.directive.js"></script>
         <script src="components/multipleTableVisualization/multipleTableVisualization.directive.js"></script>
         <script src="components/networkGraph/directedGraph.js"></script>
         <script src="components/networkGraph/directedGraphMediator.js"></script>
