--- a/client/descriptors/clearFiltersOnLoadBGWidgetDescriptor.html
+++ b/client/descriptors/clearFiltersOnLoadBGWidgetDescriptor.html
@@ -21,22 +21,22 @@ p=/[\\\"\x00-\x1f\x7f-\x9f\u00ad\u0600-\u0604\u070f\u17b4\u17b5\u200c-\u200f\u20
     path = path.replace(/\/[^\/]+$/, "/");
 
     widgetData = {
-        "universalName": "neon.demo.widget.filterbuilder",
-        "displayName": "Neon Filter Builder",
-        "description": "A sample widget that uses Neon's filter capabilities to limit data returned from a datasource via a Neon connection.  Filters created by this widget will effect any other widget attached to the same data source in the same session.",
+        "universalName": "neon.demo.widget.clear-filters-on-load",
+        "displayName": "Neon Clear Filters on Load",
+        "description": "A utility widget that clears any old filters in a session that may get stuck after a page refresh",
         "widgetVersion": "1.0",
-        "widgetUrl": path + "../filterBuilderWidget.html",
-        "imageUrlSmall": path + "../assets/images/visualizations/CreateFilter64.png",
-        "imageUrlLarge": path + "../assets/images/visualizations/CreateFilter64.png",
+        "widgetUrl": path + "../clearFiltersOnLoadBGWidget.html",
+        "imageUrlSmall": path + "../img/Neon_16x16.png",
+        "imageUrlLarge": path + "../img/Neon_60x34.png",
         "width": 500,
-        "height": 500,
+        "height": 440,
         "visible": true,
-        "singleton": false,
-        "background": false,
+        "singleton": true,
+        "background": true,
         "widgetTypes": [
             "standard"
         ],
-        "defaultTags": ["map", "geo", "neon"],
+        "defaultTags": ["data", "neon"],
         "intents": {}
     };
     /********************************************************************/
