--- a/client/opsClockWidget.html
+++ b/client/opsClockWidget.html
@@ -296,9 +296,6 @@
 
                 $scope.element = $(window);
 
-                console.log(config);
-                console.log(datasets);
-                console.log(layouts);
                 // Load the possible datasets.
                 // for (var i = 0; i < datasets.length; i++) {
                 //     datasetService.addDataset(datasets[i]);
@@ -348,14 +345,14 @@
         <script src="components/ganttChart/ganttChart.controller.js"></script>
         <script src="components/import/import.directive.js"></script>
         <script src="components/import/removeDataset.directive.js"></script>
-        <script src="components/lineChart/lineChart.directive.js"></script>
+        <script src="components/lineChart/lineChart.controller.js"></script>
         <script src="components/lineChart/lineChart.js"></script>
         <script src="components/linksPopup/linksPopup.directive.js"></script>
         <script src="components/linksPopup/linksPopup.service.js"></script>
         <script src="components/linksPopup/linksPopupButton.directive.js"></script>
         <script src="components/map/coremap.js"></script>
         <script src="components/map/heatmapLayer.js"></script>
-        <script src="components/map/map.directive.js"></script>
+        <script src="components/map/map.controller.js"></script>
         <script src="components/map/nodeLayer.js"></script>
         <script src="components/map/pointsLayer.js"></script>
         <script src="components/map/selectedPointsLayer.js"></script>
