--- a/client/timelineSelectorWidget.html
+++ b/client/timelineSelectorWidget.html
@@ -349,14 +349,14 @@
         <script src="components/ganttChart/ganttChart.controller.js"></script>
         <script src="components/import/import.directive.js"></script>
         <script src="components/import/removeDataset.directive.js"></script>
-        <script src="components/lineChart/lineChart.directive.js"></script>
+        <script src="components/lineChart/lineChart.controller.js"></script>
         <script src="components/lineChart/lineChart.js"></script>
         <script src="components/linksPopup/linksPopup.directive.js"></script>
         <script src="components/linksPopup/linksPopup.service.js"></script>
         <script src="components/linksPopup/linksPopupButton.directive.js"></script>
         <script src="components/map/coremap.js"></script>
         <script src="components/map/heatmapLayer.js"></script>
-        <script src="components/map/map.directive.js"></script>
+        <script src="components/map/map.controller.js"></script>
         <script src="components/map/nodeLayer.js"></script>
         <script src="components/map/pointsLayer.js"></script>
         <script src="components/map/selectedPointsLayer.js"></script>
